Fix cursor pointer not showing over the hamburger
The previous commit didn't quite fix it

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -50,7 +50,7 @@ body {
 
 a,
 .clickable {
-  cursor: url("https://cdn.custom-cursor.com/db/pointer/32/Bongo_Cat_Pointer.png"), default;
+  cursor: url("https://cdn.custom-cursor.com/db/pointer/32/Bongo_Cat_Pointer.png"), default !important;
 }
 
 a {
